# parsimony

./: .creds  .gitignore  Cargo.toml  README.md
crates/parsimony-bench/: Cargo.toml
crates/parsimony-bench/src/: compare.rs  lib.rs  parse.rs  runner.rs
crates/parsimony-cli/: Cargo.toml
crates/parsimony-cli/src/: main.rs  mesh_gen.rs
crates/parsimony-core/: Cargo.toml
crates/parsimony-core/src/: clearance_grid.rs  compartment.rs  fiber.rs  fiber_pack.rs  genome.rs  ingredient.rs  lib.rs  metrics.rs  octree.rs  output.rs  pipeline.rs  placement.rs  placer.rs  recipe.rs  relax.rs
crates/parsimony-core/tests/: ecoli_nucleoid.rs  ecoli_starter.rs  shape_zoo.rs  spheres_in_a_box.rs
crates/parsimony-gpu/: Cargo.toml
crates/parsimony-gpu/src/: clearance_update.wgsl  lib.rs
crates/parsimony-spatial/: Cargo.toml
crates/parsimony-spatial/benches/: bvh.rs  qbvh.rs
crates/parsimony-spatial/examples/: compare_kdtree.rs  mesh_voxelize.rs
crates/parsimony-spatial/src/: aabb.rs  brute.rs  bvh.rs  index.rs  lib.rs  qbvh.rs  query.rs  voxel.rs
docs/: REPORT.md  ROADMAP.md  parsimony-design.md
examples/genome/: ecoli_k12_genes.csv  mycoplasma_g37_genes.csv
examples/pipelines/: ecoli_nucleoid.pipeline.json  mycoplasma.pipeline.json  mycoplasma_full.pipeline.json
examples/recipes/: blood_plasma.json  ecoli_nucleoid.json  ecoli_starter.json  mycoplasma.json  mycoplasma_full.json  pdb_proteins.json  shape_zoo.json
scripts/: ecoli_genome_csv.py  pdb_to_mesh.py  purge-generated.sh  render_simularium.py  serve.py  translate_mycoplasma.py  view_pack.sh  view_report.sh
viewer/: README.md  index.html  viewer.js
viewer/data/: index.json
