[workspace]
resolver = "2"
members = [
    "crates/parsimony-spatial",
    "crates/parsimony-core",
    "crates/parsimony-cli",
    "crates/parsimony-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/prismofeverything/parsimony"

[workspace.dependencies]
parsimony-spatial = { path = "crates/parsimony-spatial" }
parsimony-core    = { path = "crates/parsimony-core" }
parsimony-cli     = { path = "crates/parsimony-cli" }
parsimony-bench   = { path = "crates/parsimony-bench" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
anyhow = "1"
rand = "0.8"
rand_xoshiro = "0.6"
parry3d = "0.18"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
glam = { version = "0.29", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"
criterion = "0.5"
indexmap = { version = "2", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
wide = "0.7"
tempfile = "3"
