[package]
name = "parsimony-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface to parsimony"

[[bin]]
name = "parsimony"
path = "src/main.rs"

[dependencies]
parsimony-core = { workspace = true }
parsimony-spatial = { workspace = true }
parsimony-bench = { path = "../parsimony-bench" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
fast-surface-nets = "0.2"
ureq = "2"

[dev-dependencies]
tempfile = { workspace = true }
