[package]
name = "parsimony-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core packing engine: recipe, ingredient, compartment, placement"

[dependencies]
parsimony-spatial = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
