[package]
name = "parsimony-spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sparse hierarchical multiscale spatial structures for parsimony"

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_xoshiro = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bvh"
harness = false
