[package]
name = "parsimony-spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sparse hierarchical multiscale spatial structures for parsimony"

[dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
rand_xoshiro = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "qbvh"
harness = false
